tests/invalid/builtin_proc.err_exp
builtin_proc.m:019: In clause for predicate `foo'/2:
builtin_proc.m:019:   error: call to [38;5;203mundefined[39;49m predicate
builtin_proc.m:019:   [38;5;87m`builtin.no_such_pred'/2.[39;49m
